--- a/Gizmo.Client.UI.Resources/Properties/Resources.da-dk.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.da-dk.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: da-DK, Danish (Denmark)
   Exported by: Oleg Savelos
-  Exported at: Wed, 18 Oct 2023 10:02:27 +0300 
+  Exported at: Tue, 14 Nov 2023 08:55:08 +0200 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1451,5 +1451,26 @@ Genoplad venligst din konto nu.</value>
   </data> 
   <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
     <value>GIZ_GEN_GÆST</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_EXPIRES" xml:space="preserve"> 
+    <value>Expires</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_REMAINING_TIME" xml:space="preserve"> 
+    <value>Remaining time</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_USABLE_TIME" xml:space="preserve"> 
+    <value>Usable time</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_TIME_OFFER" xml:space="preserve"> 
+    <value>Time package</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_FIXED_TIME" xml:space="preserve"> 
+    <value>Fixed time package</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_RATE" xml:space="preserve"> 
+    <value>Rate</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_USING_CREDIT" xml:space="preserve"> 
+    <value>Using credit</value> 
   </data> 
 </root>
