--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -382,7 +382,7 @@
     <value>Already a member?</value>
   </data>
   <data name="GIZ_LOGIN_FORGOT_YOUR_PASSWORD" xml:space="preserve">
-    <value>Forgot you password?</value>
+    <value>Forgot your password?</value>
   </data>
   <data name="GIZ_LOGIN_NOT_A_MEMBER" xml:space="preserve">
     <value>Not a member?</value>
